tests/good/simple26.tig
let
  var x:=0
in
  x:=42;
  1/42
end