tests/bad/simple15.tig
var x := if 1 then 1/0 else 0